--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2025-04-11 Version: 2.1.0
+- Support API GetAssistantCapability.
+
+
 2025-04-02 Version: 2.0.53
 - Update API CreateWorkspaceDoc: add response parameters Body.dentryUuid.
 - Update API CreateWorkspaceDoc: add response parameters Body.vendorRequestId.
