--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2025-06-10 Version: 2.7.0
+- Support API UpdateConvExtension.
+
+
 2025-06-05 Version: 2.6.0
 - Support API AuthorizeSkill.
 - Support API ListSkill.
