--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,11 @@
+2025-07-02 Version: 2.8.0
+- Support API InsertDropDownList.
+- Update API CreateReport: add response parameters Body.result.
+- Update API CreateRun: add request parameters body.allowStructViewContent.
+- Update API CreateRun: add response parameters Body.messages.$.contentStruct.
+- Update API SaveContent: add response parameters Body.result.
+
+
 2025-06-10 Version: 2.7.0
 - Support API UpdateConvExtension.
 
