--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+2025-10-14 Version: 2.12.0
+- Support API DocBlocksDelete.
+- Support API DocBlocksModify.
+
+
 2025-10-14 Version: 2.11.4
 - Generated cpp 2023-04-26 for aliding.
 
