--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2025-11-20 Version: 2.13.0
+- Support API CopyDentryByNodeId.
+
+
 2025-11-20 Version: 2.12.2
 - Generated cpp 2023-04-26 for aliding.
 
